# gke-cluster-notifications

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: release.yaml  rust-tests.yml
src/: main.rs  message.rs
src/message/: attributes.rs  slack.rs  tests.yaml
src/message/attributes/: payload.rs
terraform/: main.tf  variables.tf
