[package]
name = "gke-cluster-notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-stackdriver = "0.6.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
