[package]
name = "gke-cluster-notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
axum-server = "0.4.4"
base64 = "0.21.0"
hyper = "0.14.23"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-stackdriver = "0.6.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
serde_yaml = "0.9.16"
