[package]
name = "gke-cluster-notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
axum-server = "0.7.2"
base64 = "0.22.1"
hyper = "1.6.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-stackdriver = "0.10.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
serde_yaml = "0.9.34"
